k8s/network/allow-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: hello-app
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: aws-load-balancer-controller
      ports:
        - port: 5678
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app: hello-app
      ports:
        - port: 5678
          protocol: TCP
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: hello-app
      ports:
        - port: 5678
          protocol: TCP
  policyTypes:
    - Ingress
    - Egress
